Freedom Sanbox Ant Deploy/src/objects/Renewal__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Received__c</fullName>
        <label>Amount Received</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cheque_Received_Date__c</fullName>
        <label>Cheque Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discontinuation_SMS_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discontinuation SMS Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Renewals</relationshipLabel>
        <relationshipName>Renewals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expected_Amount__c</fullName>
        <label>Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Opted_for_Renewal__c</fullName>
        <label>Has Opted for Renewal</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Renewal_Count__c</fullName>
        <formula>YEAR( Renewal_Date__c ) - YEAR(DATEVALUE(Entity__r.CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_SMS_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal SMS Sent</label>
        <type>Checkbox</type>
    </fields>
    <label>Renewal</label>
    <nameField>
        <displayFormat>Renewal-{0}</displayFormat>
        <label>Renewal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cheque_Received_Date</fullName>
        <active>true</active>
        <description>Cheque Received Date cannot be null</description>
        <errorConditionFormula>OR(
AND(ISNULL(Cheque_Received_Date__c),ISPICKVAL(Has_Opted_for_Renewal__c,&apos;Yes&apos;)),
AND(NOT(ISNULL(Cheque_Received_Date__c)),NOT(ISPICKVAL(Has_Opted_for_Renewal__c,&apos;Yes&apos;)))
)</errorConditionFormula>
        <errorMessage>Cheque Received Date has to be entered if &apos;Has Opted for Renewal&apos; equals to &apos;Yes&apos; and vice versa</errorMessage>
    </validationRules>
</CustomObject>